# deepwork

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  dev  langgraph.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: README.md  config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: checks.yml
apps/api/: .gitignore  AGENTS.md  Makefile  README.md  openapi.json  pyproject.toml
apps/api/scripts/: check_package.py  export_openapi.py
apps/api/src/deepwork_api/: __init__.py
apps/api/src/deepwork_api/adapters/: __init__.py
apps/api/src/deepwork_api/adapters/fixture/: __init__.py  status.py  tasks.py
apps/api/src/deepwork_api/adapters/persistence/: __init__.py  sqlite.py
apps/api/src/deepwork_api/adapters/sources/classic/: __init__.py  runtime.py  source.py
apps/api/src/deepwork_api/adapters/sources/local/: __init__.py  source.py
apps/api/src/deepwork_api/application/: __init__.py  local_runner.py  status.py  tasks.py
apps/api/src/deepwork_api/bootstrap/: __init__.py  api.py  worker.py
apps/api/src/deepwork_api/contracts/: __init__.py  status.py  tasks.py
apps/api/src/deepwork_api/domain/: __init__.py  status.py  tasks.py
apps/api/src/deepwork_api/ports/: __init__.py  clock.py  status.py  tasks.py
apps/api/src/deepwork_api/transport/: __init__.py  http.py  tasks.py
apps/api/tests/contract_tests/: test_classic_deployment_execution.py  test_http.py  test_local_source_execution.py  test_local_source_live.py  test_openapi.py  test_sqlite_recovery.py  test_worker.py
apps/api/tests/unit_tests/: test_architecture.py  test_bootstrap_local_source.py  test_bootstrap_persistence.py  test_local_runner.py  test_offline_commands.py  test_public_api.py  test_status.py  test_tasks.py  test_transport_cursor.py
apps/api/tests/unit_tests/persistence/: test_sqlite_tasks.py
apps/api/tests/unit_tests/sources/classic/: __init__.py  test_source.py
apps/api/tests/unit_tests/sources/local/: __init__.py  test_live_agent_server.py  test_source.py
apps/web/: .env.example  .gitignore  README.md  next.config.ts  package.json  tsconfig.json
docs/: AGENTS.md  DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
docs/design/: deepwork-design-brief.html
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/: index.md  tech-debt-tracker.md
docs/plan/: 01-vision.md  02-architecture.md  03-ui-spec.md  04-roadmap.md  decisions.md
docs/plans/: 2026-07-22-001-feat-deepwork-v1-delivery-plan.md  application-architecture.md  code-conventions.md
docs/product-specs/: index.md  (+3 more)
tools/contract-spikes/attachments/: README.md  pyproject.toml
tools/contract-spikes/attachments/src/attachment_contract_spikes/: __init__.py  generate_matrix.py  inventory.py  pytest_plugin.py  scope.py  scrub.py  state_machine.py  validate_matrix.py  validate_scope.py
tools/contract-spikes/attachments/tests/: conftest.py  test_live_contract.py  test_matrix.py  test_scrub.py  test_state_machine.py
tools/contract-spikes/auth/: pyproject.toml
tools/contract-spikes/auth/src/auth_contract_spikes/: __init__.py  catalog.py  generate_matrix.py  inventory.py  live.py  policy.py  pytest_plugin.py  scrub.py  synthetic_server.py  validate_matrix.py
tools/contract-spikes/auth/tests/: conftest.py  test_live_contract.py  test_live_safety.py  test_matrix.py  test_policy.py  test_scrub.py  test_validator.py
tools/contract-spikes/coding-github/: pyproject.toml
tools/contract-spikes/coding-github/src/coding_github_spikes/: __init__.py  catalog.py  contracts.py  fakes.py  generate.py  inventory.py  live.py  pytest_plugin.py  scrub.py  validate_live_ledger.py  validate_matrix.py  validate_scope.py
tools/contract-spikes/coding-github/tests/: conftest.py  test_contracts.py  test_evidence.py  test_fakes.py  test_live_contract.py
tools/contract-spikes/coding-review-surfaces/: build_backend.py  pyproject.toml
tools/contract-spikes/coding-review-surfaces/src/coding_review_surface_spikes/: __init__.py  contracts.py  fake_adapters.py  inventory.py  pytest_runner.py  scrub.py  validate_matrix.py  validate_scope.py  verify_exact_diff.py
tools/contract-spikes/coding-review-surfaces/tests/: conftest.py  test_contracts.py
tools/contract-spikes/langchain/: build_backend.py  pyproject.toml
tools/contract-spikes/langchain/src/langchain_contract_spikes/: __init__.py  contracts.py  inventory.py  live.py  pytest_runner.py  scrub.py  validate_matrix.py
tools/contract-spikes/langchain/tests/: conftest.py  test_contracts.py
tools/contract-spikes/plan-approval/: pyproject.toml
tools/contract-spikes/plan-approval/src/plan_approval_contract_spikes/: __init__.py  catalog.py  contract.py  engine.py  errors.py  fake.py  generate_evidence.py  inventory.py  pytest_entry.py  scenarios.py  scrub.py  store.py  validate_matrix.py  validate_scope.py
tools/contract-spikes/plan-approval/tests/: conftest.py  test_evidence.py  test_live_contract.py  test_scenarios.py  test_store.py
tools/contract-spikes/research-writing-outcomes/installed-public/: README.md  pyproject.toml
tools/contract-spikes/research-writing-outcomes/installed-public/tests/: test_installed_public.py
tools/contract-spikes/research-writing-outcomes/offline/: build_backend.py  pyproject.toml
tools/contract-spikes/research-writing-outcomes/offline/src/: sitecustomize.py
tools/contract-spikes/research-writing-outcomes/offline/src/research_writing_outcome_spikes/: __init__.py  common.py  fake_runtime.py  generate_corpus.py  hash_evidence.py  inventory.py  record_validation.py  scrub.py  validate_evidence.py  validate_matrix.py  validate_review.py  validate_scope.py
tools/contract-spikes/research-writing-outcomes/offline/tests/: support.py  test_fake_runtime.py  test_matrix.py  test_network_denial.py  test_retained_evidence.py  test_review_attestation.py
(+781 files in other folders)
