[project]
name = "coding-github-spikes"
version = "0.1.0"
description = "Credential-free GitHub App, proxy, draft PR, and CI contract probe"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest==8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coding_github_spikes"]

[project.entry-points.pytest11]
coding_github_spikes = "coding_github_spikes.pytest_plugin"

[tool.pytest.ini_options]
addopts = "-q"
markers = [
  "live_contract: requires an explicit non-production mutation grant and accepted upstream evidence",
]
testpaths = ["tests"]
